# weighted-levenshtein-rs

./: .gitignore  CONTRIBUTORS.txt  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: lib.rs
test/: test.py
weighted_levenshtein/: __init__.py
