[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "weighted_levenshtein"
version = "0.3.0"
description = "Library providing functions to calculate Levenshtein distance, Optimal String Alignment distance, and Damerau-Levenshtein distance, where the cost of each operation can be weighted by letter."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vikram Saraph", email = "vikram.saraph.22@gmail.com" }]
maintainers = [{ name = "Vikram Saraph", email = "vikram.saraph.22@gmail.com" }]
keywords = ["Levenshtein", "Damerau", "weight", "weighted", "distance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/infoscout/weighted-levenshtein"

[tool.ruff]
line-length = 120

[tool.maturin]
python-source = "."
module-name = "weighted_levenshtein._clev"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
    "pre-commit>=4.0",
    "pytest>=8.3.5",
    "ruff>=0.15.4",
]
